--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.faces-2.2.13.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
