--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -38,4 +38,9 @@
     <param-value>true</param-value>
 </context-param>
 
+<context-param>
+    <param-name>primefaces.THEME</param-name>
+    <param-value>#{temaBean.tema}</param-value>
+</context-param>
+
 </web-app>
